# dados_embarcados

./: CMakeLists.txt  README.md  main.c
inc/: button_handler.h  ldr_handler.h  lwipopts.h  wifi_handler.h
src/: button_handler.c  ldr_handler.c  wifi_handler.c
